namespace SEM5_PI_WEBAPI.Infraestructure.VesselsTypes
{
    public class VesselTypeRepository
    {
    
    }
}

