@startuml
title US2.2.1 – Class Diagram (Complete)

skinparam packageStyle rectangle
skinparam shadowing false
hide circle
hide empty members

' ==================== DOMAIN ====================
package "Domain" {
  class VesselType {
    - string Name
    - string Description
    - int MaxBays
    - int MaxRows
    - int MaxTiers
    - float Capacity
    + ChangeName(string)
    + ChangeDescription(string)
    + ChangeDimensions(int, int, int)
  }

  class VesselTypeId {
    - Guid Value
    + AsGuid() : Guid
  }

  class BusinessRuleValidationException
}

' ==================== DTOs ====================
package "DTOs" {
  class CreatingVesselTypeDto {
    + string Name
    + string Description
    + int MaxBays
    + int MaxRows
    + int MaxTiers
  }

  class UpdatingVesselTypeDto {
    + string? Name
    + string? Description
    + int? MaxBays
    + int? MaxRows
    + int? MaxTiers
  }

  class VesselTypeDto {
    + Guid Id
    + string Name
    + string Description
    + int MaxBays
    + int MaxRows
    + int MaxTiers
    + float Capacity
  }
}

' ==================== APPLICATION ====================
package "Application" {
  interface IVesselTypeService {
    + GetAllAsync() : List<VesselTypeDto>
    + GetByIdAsync(VesselTypeId) : VesselTypeDto
    + GetByNameAsync(string) : VesselTypeDto
    + GetByDescriptionAsync(string) : List<VesselTypeDto>
    + FilterAsync(string?, string?, string?) : List<VesselTypeDto>
    + AddAsync(CreatingVesselTypeDto) : VesselTypeDto
    + UpdateAsync(Guid, UpdatingVesselTypeDto) : VesselTypeDto
  }

  class VesselTypeService implements IVesselTypeService {
    - IVesselTypeRepository _repo
    - IUnitOfWork _unitOfWork
    - ILogger<VesselTypeService> _logger
    + All public methods defined in IVesselTypeService
  }

  class VesselTypeFactory {
    + CreateBasicVesselType(CreatingVesselTypeDto) : VesselType
    + CreateDtoVesselType(VesselType) : VesselTypeDto
  }
}

' ==================== INFRASTRUCTURE ====================
package "Infrastructure" {
  interface IVesselTypeRepository {
    + GetAllAsync() : List<VesselType>
    + GetByIdAsync(VesselTypeId) : VesselType
    + GetByNameAsync(string) : VesselType?
    + GetByDescriptionAsync(string) : List<VesselType>
    + FilterAsync(string?, string?, string?) : List<VesselType>
    + AddAsync(VesselType)
    + Save(VesselType)
  }

  class VesselTypeRepository implements IVesselTypeRepository {
  }

  interface IUnitOfWork {
    + CommitAsync()
  }

  class UnitOfWork implements IUnitOfWork {
  }
}

' ==================== PRESENTATION ====================
package "Presentation" {
  class VesselTypeController {
    + GetAll() : List<VesselTypeDto>
    + GetById(Guid) : VesselTypeDto
    + GetByName(string) : VesselTypeDto
    + GetByDescription(string) : List<VesselTypeDto>
    + Filter(string?, string?, string?) : List<VesselTypeDto>
    + Create(CreatingVesselTypeDto) : VesselTypeDto
    + Update(Guid, UpdatingVesselTypeDto) : VesselTypeDto
  }
}

' ==================== CROSS-CUTTING ====================
package "Cross-cutting" {
  interface ILogger<T> {
    + LogInformation(string, params)
    + LogWarning(string, params)
    + LogError(string, params)
  }
}

' ==================== RELATIONSHIPS ====================
VesselType "1" *-- "1" VesselTypeId
VesselTypeService --> IVesselTypeRepository : uses
VesselTypeService --> IUnitOfWork : commits
VesselTypeService --> VesselTypeFactory : converts
VesselTypeService --> ILogger : logs
VesselTypeRepository --> VesselType : persists
VesselTypeFactory --> VesselType : builds
VesselTypeFactory --> VesselTypeDto : maps
VesselTypeController --> IVesselTypeService : depends on
VesselTypeController --> ILogger : logs

@enduml
